# FabriCAD

./: .gitignore  FEATURE_DETECTOR_V5_SUMMARY.md  LICENSE  ReadMe.md  analyze_count_accuracy.py  evaluate_v5.py  extract_features_from_csv.py  feature_detector_v5.py  index.html  inference_v5_demo.ipynb  prepare_feature_dataset_v4.py  pyproject.toml  train_feature_detector_v5.py
data/: README.md
data/1_raw/00000000/: geometry_00000000.STEP  plan.csv  plan_metadata.csv
data/1_raw/00000001/: geometry_00000001.STEP  plan.csv  plan_metadata.csv
data/1_raw/00000002/: geometry_00000002.STEP  plan.csv  plan_metadata.csv
data/1_raw/00000003/: geometry_00000003.STEP  plan.csv  plan_metadata.csv
data/1_raw/00000004/: geometry_00000004.STEP  plan.csv  plan_metadata.csv
data/1_raw/00000005/: plan.csv  plan_metadata.csv
data/1_raw/00000006/: geometry_00000006.STEP  plan.csv  plan_metadata.csv
data/1_raw/00000007/: geometry_00000007.STEP  plan.csv  plan_metadata.csv
data/1_raw/00000008/: geometry_00000008.STEP  plan.csv  plan_metadata.csv
data/1_raw/00000009/: geometry_00000009.STEP  plan.csv  plan_metadata.csv
data/1_raw/00000010/: geometry_00000010.STEP  plan.csv  plan_metadata.csv
data/1_raw/00000011/: geometry_00000011.STEP  plan.csv  plan_metadata.csv
data/1_raw/00000012/: plan.csv  (+2 more)
notebooks/: fabricad_evaluation.ipynb
scripts/: buid_fabricad_subsets.py  fabricad_evaluation.py  fabricad_paper_plots.py
src/: constants.py
src/fabricad/: __init__.py  constants.py  graph_builder.py
streamlitApp/: Home🏠.py
streamlitApp/pages/: Preview data 🎥.py
(+428 files in other folders)
