[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fabricad"
version = "0.1.0"
requires-python = "==3.12.2"
dependencies = [
    "streamlit",
    "matplotlib",
    "seaborn",
    "ipykernel",
    "pandas==2.2.3",
    "tqdm",
    "scikit-learn",
    "joblib",
    "psutil",
    "xgboost",
    "lightgbm",
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "torch-scatter",
    "torch-sparse"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

